--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 
 <!DOCTYPE html>
-<!-- saved from url=(0070)https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="./My First Bitstarter_files/startup-code-jquery.js"></script>
-    <script src="./My First Bitstarter_files/startup-code-bootstrap.js"></script>
-    <link href="./My First Bitstarter_files/css" rel="stylesheet" type="text/css">
-    <link href="./My First Bitstarter_files/css(1)" rel="stylesheet" type="text/css">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
+          rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
@@ -98,25 +99,26 @@
         color: #ccccff;
       }
     </style>
-  <script type="text/javascript" async="" src="./My First Bitstarter_files/mzroute.js"></script><script type="text/javascript" async="" src="./My First Bitstarter_files/mzroute(1).js"></script><script type="text/javascript" async="" src="./My First Bitstarter_files/_winad.js"></script><script type="text/javascript" async="" src="./My First Bitstarter_files/mzroute.js"></script><script type="text/javascript" async="" src="./My First Bitstarter_files/mzroute(1).js"></script></head>
-  <body style="">
+  </head>
+  <body>
 
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Bitstarter</a>
+          <a class="brand" href="#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#">Home</a></li>
-              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#about">About</a></li>
-              <li><a href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#contact">Contact</a></li>
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -144,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -199,7 +201,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
           <p>
@@ -235,7 +237,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="./My First Bitstarter_files/480x300">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
       </div>
 
@@ -248,7 +250,8 @@
             <div class="accordion" id="accordion2">
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#collapseOne">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseOne">
                     What does FAQ stand for?
                   </a>
                 </div>
@@ -260,7 +263,8 @@
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="https://spark-public.s3.amazonaws.com/startup/code/bitstarter-hw4.html#collapseTwo">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseTwo">
                     What's a Frequently Asked Question?
                   </a>
                 </div>
@@ -287,6 +291,5 @@
         </div>
       </div>
     </div>
-  
-
-</body></html>
+  </body>
+</html>
