--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1><img src="http://cs425125.vk.me/v425125332/2ed3/o2nGHApIm3Y.jpg">We Design</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://cs425125.vk.me/v425125332/2ebe/6ZCVYc9xVeE.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -201,21 +201,17 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://cs425125.vk.me/v425125332/2ec5/UTiVk_7upN0.jpg">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+             Do you have favorite stuff ? You can get T-short with your own oject. Make photo of your object. Upload it on server and get t-short with your fun image. You can choose design and size of t-short. Like it if you want to get such t-short and fun image of your stuff (you can use it for avatar) <br><br>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
             porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
             mollis justo velit at nunc. Fusce nec egestas sem. Donec
             fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            volutpat lorem ut congue malesuada. 
+
           </p>
         </div>
       </div>
@@ -237,7 +233,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://cs425125.vk.me/v425125332/2ecc/wUopf3XY-x8.jpg">
         </div>
       </div>
 
