--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<!-- saved from url=(0071)https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
-          rel="stylesheet" type="text/css">
+    <script src="./My First Bitstarter_files/startup-code-jquery.js"></script>
+    <script src="./My First Bitstarter_files/startup-code-bootstrap.js"></script>
+    <link href="./My First Bitstarter_files/css" rel="stylesheet" type="text/css">
+    <link href="./My First Bitstarter_files/css(1)" rel="stylesheet" type="text/css">
     <style type="text/css">
 
       /* Large desktop */
@@ -98,27 +96,31 @@
       .footer a {
         color: #ccccff;
       }
+        
+         div.addthis_toolbox {
+  width:180px;
+  margin: 0 auto;
+ }
     </style>
   </head>
-  <body>
+  <body style="">
 
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar"
-                  data-toggle="collapse" data-target=".nav-collapse">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#">Home</a></li>
+              <li><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#about">About</a></li>
+              <li><a href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -134,25 +136,26 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1><img src="http://cs425125.vk.me/v425125332/2ed3/o2nGHApIm3Y.jpg">We Design</h1>
+          <h1>WeDesign</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">We design with you!</p>
+          <p class="lead">Exclusive designs for your t-shirts</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://cs425125.vk.me/v425125332/2ebe/6ZCVYc9xVeE.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="drawit2.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -173,6 +176,7 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -181,17 +185,30 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          <div class="row-fluid">
+          <div class="span8 offset2 social">
+           <!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+<a class="addthis_button_preferred_1"></a>
+<a class="addthis_button_preferred_2"></a>
+<a class="addthis_button_preferred_3"></a>
+<a class="addthis_button_preferred_4"></a>
+<a class="addthis_button_compact"></a>
+<a class="addthis_counter addthis_bubble_style"></a>
+</div>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=xa-5206225f0af06288"></script>
+<!-- AddThis Button END -->
+          </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -199,41 +216,14 @@
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
-      <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://cs425125.vk.me/v425125332/2ec5/UTiVk_7upN0.jpg">
-        </div>
-        <div class="span5 copy">
-          <p>
-             Do you have favorite stuff ? You can get T-short with your own oject. Make photo of your object. Upload it on server and get t-short with your fun image. You can choose design and size of t-short. Like it if you want to get such t-short and fun image of your stuff (you can use it for avatar) <br><br>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. 
-
-          </p>
-        </div>
-      </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+          <p>WeDesign offers you a unique services allowing you to get t-shirts with cartoon-style images of things you love! We design for you exclusive illustrations based on images you send. Simple, affordable and truly unique!</p>
+          <p>You are the person who can make our idea come true! Support us now, and you will get 10% lifetime discount for all our services! Help us grow - we want to be creative for you!</p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://cs425125.vk.me/v425125332/2ecc/wUopf3XY-x8.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="drawit-small.jpg">
         </div>
       </div>
 
@@ -246,8 +236,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
             <div class="accordion" id="accordion2">
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseOne">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#collapseOne">
                     What does FAQ stand for?
                   </a>
                 </div>
@@ -259,8 +248,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseTwo">
+                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Findex-fluid.html#collapseTwo">
                     What's a Frequently Asked Question?
                   </a>
                 </div>
@@ -287,5 +275,6 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
         </div>
       </div>
     </div>
-  </body>
-</html>
+  
+
+<iframe id="rdbIndicator" width="100%" height="270" border="0" src="./My First Bitstarter_files/indicator.html" style="display: none; border: 0; position: fixed; left: 0; top: 0; z-index: 2147483647"></iframe></body></html>
